<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    >

    <Button
        android:id="@+id/ButtonStory"
        android:layout_width="104dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:background="#eeeeee"
        android:onClick="Story"
        android:text="@string/Story"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonSettings"
        android:layout_width="88dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="112dp"
        android:background="#eeeeee"
        android:contentDescription="@string/Settings"
        android:onClick="Settings"
        android:text="@string/Settings"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonExit"
        android:layout_width="72dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="160dp"
        android:background="#eeeeee"
        android:contentDescription="@string/Exit"
        android:onClick="Exit"
        android:text="@string/Exit"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ButtonJoin"
        android:layout_width="116dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="#eeeeee"
        android:onClick="Join"
        android:contentDescription="@string/Join"
        android:text="@string/Join"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>