<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_death"
    tools:context=".DeathActivity">

    <Button
        android:id="@+id/buttonPlayAgain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginStart="147dp"
        android:layout_marginEnd="149dp"
        android:contentDescription="@string/play_again"
        android:onClick="onPlayAgainButtonClick"
        android:text="@string/play_again"
        app:layout_constraintBottom_toTopOf="@+id/buttonMenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="147dp"
        android:layout_marginEnd="149dp"
        android:layout_marginBottom="177dp"
        android:contentDescription="@string/back_to_menu"
        android:onClick="onBackToMenuButtonClick"
        android:text="@string/back_to_menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="162dp"
        android:layout_marginEnd="164dp"
        android:layout_marginBottom="82dp"
        android:gravity="center"
        android:text="@string/score"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonPlayAgain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:layout_marginEnd="164dp"
        android:layout_marginStart="162dp"
        android:layout_marginTop="111dp"
        android:fontFamily="@font/aldrich"
        android:text="@string/you_ve_failed"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/textViewScore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewKiller"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="162dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="164dp"
        android:fontFamily="@font/aldrich"
        android:text="@string/by"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMessage" />
</android.support.constraint.ConstraintLayout>

