<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layoutInventory"
    android:background="@drawable/background_inventory"
    tools:context=".InventoryActivity">

    <Button
        android:id="@+id/buttonStory"
        android:layout_width="169dp"
        android:layout_height="174dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorTransparency"
        android:onClick="onButtonClick"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonDream"
        android:layout_width="169dp"
        android:layout_height="174dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorTransparency"
        android:onClick="onButtonClick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonReturn"
        android:layout_width="169dp"
        android:layout_height="174dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorTransparency"
        android:onClick="onReturnTonMenu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonAchievements"
        android:layout_width="169dp"
        android:layout_height="174dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorTransparency"
        android:onClick="onButtonClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/buttonCustomize"
        android:layout_width="169dp"
        android:layout_height="174dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="104dp"
        android:layout_marginBottom="196dp"
        android:background="@color/colorTransparency"
        android:onClick="onButtonClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.97"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.994" />

    <RelativeLayout
        android:id="@+id/layoutSubLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/colorTransparencyBlack"
        android:orientation="vertical"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.014">

        <TextView
            android:id="@+id/textViewInventory"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginStart="32dp"
            android:layout_marginTop="152dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:duplicateParentState="true"
            android:fontFamily="@font/aldrich"
            android:textColor="@color/colorWhite"
            android:textSize="16sp" />

        <Button
            android:id="@+id/CloseButton"
            android:layout_width="128dp"
            android:layout_height="64dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="11dp"
            android:layout_marginEnd="11dp"
            android:background="@color/colorTransparency"
            android:clickable="true"
            android:duplicateParentState="true"
            android:focusable="true"
            android:onClick="onCloseClick"
            android:text="@string/closeButton"
            android:textColor="@color/colorWhite"
            android:fontFamily="@font/aldrich"
            android:textSize="20sp"
            android:visibility="visible" />

        <ToggleButton
            android:id="@+id/buttonBaki"
            android:layout_width="88dp"
            android:layout_height="88dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="80dp"
            android:layout_marginTop="124dp"
            android:onClick="onCatClick"
            android:background="@drawable/player_baki_0"
            android:visibility="invisible"
            android:textColor="@color/colorGreen"
            android:textStyle="bold"
            android:textSize="70sp"
            android:textOn="@string/v"
            android:textOff="@string/empty"  />

        <ToggleButton
            android:id="@+id/buttonBob"
            android:layout_width="88dp"
            android:layout_height="88dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="178dp"
            android:layout_marginTop="124dp"
            android:onClick="onCatClick"
            android:background="@drawable/player_bob_0"
            android:visibility="invisible"
            android:textColor="@color/colorGreen"
            android:textStyle="bold"
            android:textSize="70sp"
            android:textOn="@string/v"
            android:textOff="@string/empty"  />

        <ToggleButton
            android:id="@+id/buttonGrey"
            android:layout_width="88dp"
            android:layout_height="88dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="80dp"
            android:layout_marginTop="222dp"
            android:onClick="onCatClick"
            android:textColor="@color/colorGreen"
            android:textStyle="bold"
            android:background="@drawable/player_grey_0"
            android:visibility="invisible"
            android:textSize="70sp"
            android:textOn="@string/v"
            android:textOff="@string/empty"  />

        <ToggleButton
            android:id="@+id/buttonRambo"
            android:layout_width="88dp"
            android:layout_height="88dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="178dp"
            android:layout_marginTop="222dp"
            android:onClick="onCatClick"
            android:background="@drawable/player_rambo_0"
            android:visibility="invisible"
            android:textColor="@color/colorGreen"
            android:textStyle="bold"
            android:textSize="70sp"
            android:textOn="@string/v"
            android:textOff="@string/empty" />

        <TextView
            android:id="@+id/textViewRandom"
            android:layout_width="186dp"
            android:layout_height="88dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="80dp"
            android:layout_marginTop="320dp"
            android:visibility="invisible"
            android:textColor="@color/colorWhite"
            android:fontFamily="@font/aldrich"
            android:gravity="center"
            android:textSize="20sp"
            android:text="@string/random" />

        <ToggleButton
            android:id="@+id/buttonRandom"
            android:layout_width="186dp"
            android:layout_height="88dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="80dp"
            android:layout_marginTop="320dp"
            android:visibility="invisible"
            android:textColor="@color/colorGreen"
            android:textSize="70sp"
            android:background="@drawable/toggle_button_random"
            android:onClick="onCatClick"
            android:textStyle="bold"
            android:textOn="@string/v"
            android:textOff="@string/empty"/>

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>